--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Contact Form Validation</title>
+    <title>Simple Quiz App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Contact </h1>
-    <form id="contactForm">
-        <div>
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
-            <div class="error-message" id="firstNameError"></div>
+    <div class="quiz-container">
+        <h1>Simple Quiz</h1>
+        <div class="question" id="question">
+            What is the capital of Ethiopia?
         </div>
-        <br> <br>
-        <div>
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required>
-            <div class="error-message" id="lastNameError"></div>
+        <div class="answers" id="answers">
+            <label>
+                <input type="radio" name="answer" value="addisabeba"> addisabeba
+            </label>
+            <label>
+                <input type="radio" name="answer" value="bahirdar"> bahirdar
+            </label>
+            <label>
+                <input type="radio" name="answer" value="mekele"> mekele
+            </label>
         </div>
-        <br><br>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            <div class="error-message" id="emailError"></div>
-        </div>
-        <br> <br>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
-            <div class="error" id="passwordError"></div>
-        </div>
-        <br> <br>
-        <button type="submit" id="submitBtn" >Submit</button>
-    </form>
-    <div class="success" id="successMessage"></div>
-    
-    <script src="validation.js"></script>
+        <button id="submit">Submit</button>
+        <div class="feedback" id="feedback"></div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
